--- a/index.html
+++ b/index.html
@@ -232,16 +232,12 @@
     <script>
       var fireballSize = 22;
       var getFireballSpeed = function(left) {
-        if (left) {
-          return 5;
-        }
-        return 2;
+        return left ? 5 : 2;
       };
       var wizardSpeed = 3;
       var wizardWidth = 70;
       var getWizardHeight = function(wizardWidth) {
-        var calcWizardHeight = 1.337 * wizardWidth;
-        return calcWizardHeight;
+        return (calcWizardHeight = 1.337 * wizardWidth);
       };
       var wizardHeight = getWizardHeight(wizardWidth);
       var getWizardX = function(width) {
