--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="demo"></div>
 
       <div class="setup-open">
-        <img src="./img/user-1.jpg" class="setup-open-icon" />
+        <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0" />
       </div>
     </header>
 
@@ -90,17 +90,20 @@
         method="post"
         enctype="multipart/form-data"
         autocomplete="off"
+        method="post"
+        action="https://js.dump.academy/code-and-magick"
       >
         <div class="setup-title">
           <div class="setup-user">
             <div class="upload">
               <img class="setup-user-pic" src="./img/user-1.jpg" />
-              <input type="file" name="avatar" />
+              <input type="file" name="avatar" accept="image/png, image/jpeg"/>
             </div>
             <label>
               <input
                 type="text"
                 name="username"
+                minlength="2"
                 maxlength="25"
                 required
                 class="setup-user-name"
@@ -109,7 +112,7 @@
             </label>
           </div>
 
-          <span class="setup-close">&times;</span>
+          <span class="setup-close" tabindex="0">&times;</span>
         </div>
 
         <div class="setup-artifacts-shop">
@@ -193,7 +196,9 @@
             </div>
           </div>
 
-          <button class="button setup-submit">Сохранить</button>
+          <button class="button setup-submit" type="submit">
+            Сохранить
+          </button>
         </div>
       </form>
     </div>
