--- a/index.html
+++ b/index.html
@@ -255,5 +255,8 @@
     <script src="js/setup.js"></script>
     <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
+    <script src="js/popup.js"></script>
+    <script src="js/color.js"></script>
+    <script src="js/dialog.js"></script>
   </body>
 </html>
