--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         return height / 3 - wizardHeight;
       };
     </script>
+    <script src="js/utils.js"></script>
     <script src="js/setup.js"></script>
     <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
