--- a/index.html
+++ b/index.html
@@ -253,12 +253,14 @@
       };
     </script>
     <script src="js/utils.js"></script>
+    <script src="js/debounce.js"></script>
     <script src="js/backend.js"></script>
-    <script src="js/setup.js"></script>
+    <script src="js/render.js"></script>
+    <script src="js/color.js"></script>
+    <script src="js/similar.js"></script>
     <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
     <script src="js/popup.js"></script>
-    <script src="js/color.js"></script>
     <script src="js/dialog.js"></script>
   </body>
 </html>
