--- a/index.html
+++ b/index.html
@@ -262,5 +262,6 @@
     <script src="js/game.js"></script>
     <script src="js/popup.js"></script>
     <script src="js/dialog.js"></script>
+    <script src="js/avatar.js"></script>
   </body>
 </html>
